--- a/requirements.txt
+++ b/requirements.txt
@@ -4,23 +4,37 @@ asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
 black==23.3.0
+certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+dj-stripe==2.7.3
 Django==4.2.2
 django-debug-toolbar==4.1.0
+django-enumfields==2.1.1
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.26.3
 frozenlist==1.3.3
 idna==3.4
+inflection==0.5.1
+jsonfield==3.1.0
+jsonschema==4.17.3
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.8.0
 PyJWT==2.7.0
+pyrsistent==0.19.3
+python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0
+requests==2.31.0
 sqlparse==0.4.4
+stripe==4.2.0
 tomli==2.0.1
 typing_extensions==4.6.3
+uritemplate==4.1.1
+urllib3==2.0.3
 yarl==1.9.2
