--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
 black==23.3.0
+cached-property==1.5.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
@@ -15,6 +16,7 @@ django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.26.3
+enum-compat==0.0.3
 frozenlist==1.3.3
 idna==3.4
 inflection==0.5.1
@@ -31,6 +33,7 @@ python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 stripe==4.2.0
 tomli==2.0.1
