add Django-Q & TelegramAPI to project & add async_send_message to send message when new Borrowing create

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 STRIPE_LIVE_SECRET_KEY=STRIPE_LIVE_SECRET_KEY
 STRIPE_TEST_SECRET_KEY=STRIPE_TEST_SECRET_KEY
+TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
+TELEGRAM_CHAT_ID=TELEGRAM_CHAT_ID
