--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiogram==2.25.1
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.7.0
@@ -5,6 +6,7 @@ arrow==1.2.3
 asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
+Babel==2.9.1
 black==23.3.0
 blessed==1.20.0
 cached-property==1.5.2
@@ -14,6 +16,7 @@ click==8.1.3
 dj-stripe==2.7.3
 Django==4.2.2
 django-debug-toolbar==4.1.0
+django-enum==1.2.1
 django-enumfields==2.1.1
 django-picklefield==3.1
 django-q==1.3.9
@@ -31,6 +34,8 @@ idna==3.4
 inflection==0.5.1
 jsonfield==3.1.0
 jsonschema==4.17.3
+magic-filter==1.0.9
+mixins==0.1.4
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.1
@@ -56,5 +61,3 @@ urllib3==2.0.3
 utils==1.0.1
 wcwidth==0.2.6
 yarl==1.9.2
-
-aiogram~=2.25.1
