add SECRET_KEY from .env to settings.py

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 STRIPE_LIVE_SECRET_KEY=STRIPE_LIVE_SECRET_KEY
 STRIPE_TEST_SECRET_KEY=STRIPE_TEST_SECRET_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
+
 TELEGRAM_BOT_TOKEN=TELEGRAM_BOT_TOKEN
 TELEGRAM_CHAT_ID=TELEGRAM_CHAT_ID
+
+SECRET_KEY=SECRET_KEY
